[tool.poetry]
name = "graph-study"
version = "0.1.0"
description = ""
authors = ["Marcelo Ortiz de Santana <tentativafc@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
gremlinpython = "^3.6.1"

[tool.poetry.dev-dependencies]
coverage = {extras = ["toml"], version = "^6.3.2"}
pyright = "^1.1.237"
flake8 = "^4.0.1"
autopep8 = "^1.6.0"
pylint = "^2.13.5"
tox = "^3.25.0"
isort = "^5.10.1"
black = "^22.3.0"
flake8-bandit = "^3.0.0"
flake8-docstrings = "^1.6.0"
flake8-bugbear = "^22.3.23"
autoflake = "^1.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
